--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,7 @@
 language: node_js
 node_js:
-  - "0.10"
-branches:
-  only:
-    - master
-install:
-  - git clone git://github.com/n1k0/casperjs.git ~/casperjs
-  - export PATH=$PATH:~/casperjs/bin
-  - npm install -g grunt-cli
-  - npm install -g bower
-  - npm install
-  - bower install
+  - '0.8'
+  - '0.10'
 before_script:
-  - phantomjs --version
-  - casperjs --version
-script:
-  - grunt
+  - 'npm install -g bower grunt-cli'
+  - 'bower install'
