--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,22 @@
 {
-  "name": "angularfire",
-  "version": "0.6.0",
-  "main": ["./angularfire.js"],
-  "ignore": ["Gruntfile.js", "package.js", "tests", "README.md", ".travis.yml"],
+  "name": "angular-fire",
+  "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0",
-    "angular-mocks" : "~1.2.0",
-    "firebase": "~1.0.2",
-    "firebase-simple-login": "~1.2.3",
-    "observe-js": "https://github.com/jeffbcross/observe-js.git"
+    "angular": "1.2.6",
+    "json3": "~3.2.6",
+    "es5-shim": "~2.1.0",
+    "jquery": "~1.10.2",
+    "sass-bootstrap": "~3.0.2",
+    "angular-resource": "1.2.6",
+    "angular-cookies": "1.2.6",
+    "angular-sanitize": "1.2.6",
+    "angular-route": "1.2.6",
+    "firebase": "~1.0.6",
+    "firebase-simple-login": "~1.2.5",
+    "bxslider-4": "*"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.2.6",
+    "angular-scenario": "1.2.6"
   }
 }
